syntax = "proto3";

package proto;
option go_package="work01/proto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse); // Unary
    rpc Fibonacci (FibonacciRequest) returns (stream FibonacciResponse); // server streaming
    rpc Average (stream AverageRequest) returns (AverageResponse); // client streaming
    rpc Sum (stream SumRequest) returns (stream SumResponse); //bi directional streaming
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string result = 1;
}

message FibonacciRequest {
    uint32 n = 1;
}

message FibonacciResponse {
    uint32 result = 1;
}

message AverageRequest {
    double number = 1;
}

message AverageResponse {
    double result = 1;
}

message SumRequest {
    int32 number = 1;
}

message SumResponse {
    int32 result = 1;
}